fix button on mobile

--- a/src/utils.scss
+++ b/src/utils.scss
@@ -8,6 +8,8 @@
     outline: none;
     padding: 0;
     text-decoration: none;
+    user-select: none;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
 @mixin reset-link {
@@ -20,6 +22,14 @@
     &:hover {
         &::after {
             opacity: 0.08;
+        }
+    }
+
+    &:active,
+    &:focus {
+        &::after {
+            transition-duration: 75ms;
+            opacity: .12;
         }
     }
 
